tcp-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
  labels:
    greeting: hello
spec:
  type: NodePort
  selector:
    greeting: hello
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
