bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  # annotations:
  #   cloud.google.com/neg: '{"ingress": true}'
  #   cloud.google.com/backend-config: '{"default": "my-backendconfig"}'
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage.bookinfo.svc.cluster.local
        port:
          number: 9080
# ---
# apiVersion: extensions/v1betal
# kind: Ingress 
# metadata:
#   name: ingress-istio-staging
#   namespace: istio-system
# spec:
# rules: 
#   - host: * # Will get automatic DNS reservation BAU 
#     http: 
#       paths: 
#         - backend:
#           serviceName: istio-ingressgateway
#           servicePort: 80
